# myquant

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml
backend/: Dockerfile  requirements.txt
backend/api/: urls.py
backend/config/: settings.py  urls.py
backend/stocks/: internal_urls.py  models.py  serializers.py  urls.py  views.py
backend/stocks/migrations/: 0001_enable_pg_trgm.py  0002_create_stock_master.py  0003_perf_indexes.py  (+1 more)
backend/tests/: test_stocks_api.py
bridge/: README.md  pyproject.toml  requirements.txt
bridge/src/bridge/: cli.py  config.py  kiwoom.py  normalize.py  sync.py
bridge/src/myquant_bridge.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
bridge/tests/: test_cli.py  test_config.py  test_normalize.py  test_sync.py  test_sync_branch_coverage.py  test_sync_dry_run.py  test_sync_reliability.py
docs/: README.md
docs/adr/: ADR-template.md  _template.md
docs/dev/: development-methodology.md
docs/protocol/: checklists.md  codex-prompts.md  developer-workflow.md  development-methodology.md  docs-policy.md
docs/runbook/: bridge-sync.md
docs/runbooks/: bridge-sync.md  ci.md  local-dev.md  release.md
docs/specs/: README.md  _template.md  bridge-sync-dry-run.md  stock-master-market-security-type.md  stock_master_mvp.md  system-overview.md
frontend/: Dockerfile  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/lib/: api.ts
scripts/precommit/: forbid_paths.sh
(+3 files in other folders)
