[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "myquant-bridge"
version = "0.1.0"
description = "Bridge CLI for local stock ingestion"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.32,<3.0",
    "python-dotenv>=1.0,<2.0",
    "urllib3<2",
]

[project.scripts]
bridge-cli = "bridge.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
dev = ["pytest>=7", "pytest-mock>=3"]
